# GL_Animals

./: AbstractAnimal.h  Animal.cc  Animal.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  MockAnimal.h  cmake_install.cmake  main.cpp  test.cc  testGL  wrkspc.code-workspace
src/: Imports.h  VarAnimal.h  main.cpp
src/Animals/: AbstractAnimal.h  VarAnimal.h
src/Plants/: Cactus.h  Flower.cpp  Flower.h  Plant.h  Tree.cpp  Tree.h
testy/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  runUnitTests  stdafx_test.h
testy/AnimalTest/: LegTest.cpp
